bin_PROGRAMS = solid

INCLUDES = @BLLIB_CXXFLAGS@  

solid_SOURCES = pulsedata.cc  multipowder.cc multisystem.cc propogation.cc sequenceparse.cc paramset.cc sequencerun.cc sequencerun_funcs.cc solid.cc

solid_LDFLAGS = @BLLIB_DIR@ @MPILIBDIR@ @FFTWLIBDIR@

LDADD = @BLLIB_LIBS@ @FFTWLIBS@ @MPILIBS@ 

#AM_CXXFLAGS = @CXXFLAGS@
